--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quasar-ui-json-api-viewer",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "author": "Jeff Galbraith <jeff@quasar.dev>",
   "description": "Display your Quasar JSON API",
   "license": "MIT",
@@ -29,23 +29,27 @@
   "bugs": "",
   "homepage": "",
   "devDependencies": {
-    "@quasar/quasar-ui-qmarkdown": "^1.0.6",
+    "@quasar/quasar-ui-qmarkdown": "^1.0.7",
     "@quasar/quasar-ui-qribbon": "^1.0.0-beta.14",
     "@rollup/plugin-buble": "^0.20.0",
     "@rollup/plugin-json": "^4.0.0",
-    "@vue/eslint-config-standard": "^5.0.0",
+    "@vue/eslint-config-standard": "^5.0.1",
     "autoprefixer": "^9.7.3",
     "babel-eslint": "^10.0.3",
     "chalk": "^3.0.0",
     "cssnano": "^4.1.10",
     "eslint": "^6.7.2",
-    "eslint-loader": "^3.0.2",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.0.1",
     "node-sass": "^4.13.0",
     "open": "^7.0.0",
     "postcss": "^7.0.23",
     "postcss-rtl": "^1.5.0",
-    "quasar": "^1.5.3",
+    "quasar": "^1.5.5",
     "rimraf": "^3.0.0",
     "rollup": "^1.27.8",
     "rollup-plugin-commonjs": "^10.1.0",
