--- a/ui/package.json
+++ b/ui/package.json
@@ -29,33 +29,35 @@
   "bugs": "",
   "homepage": "",
   "devDependencies": {
-    "@quasar/quasar-ui-qmarkdown": "^1.0.10",
-    "@quasar/quasar-ui-qribbon": "^1.0.0-beta.14",
-    "@rollup/plugin-buble": "^0.20.0",
-    "@rollup/plugin-json": "^4.0.0",
+    "@rollup/plugin-buble": "^0.21.0",
+    "@rollup/plugin-commonjs": "^11.0.1",
+    "@rollup/plugin-json": "^4.0.1",
+    "@rollup/plugin-node-resolve": "^6.1.0",
     "@vue/eslint-config-standard": "^5.0.1",
     "autoprefixer": "^9.7.3",
     "babel-eslint": "^10.0.3",
     "chalk": "^3.0.0",
     "cssnano": "^4.1.10",
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^6.0.1",
+    "eslint-plugin-vue": "^6.1.2",
     "node-sass": "^4.13.0",
     "open": "^7.0.0",
-    "postcss": "^7.0.25",
+    "postcss": "^7.0.26",
     "postcss-rtl": "^1.5.0",
-    "quasar": "^1.5.9",
+    "quasar": "^1.6.0",
     "rimraf": "^3.0.0",
-    "rollup": "^1.27.13",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup": "^1.28.0",
     "uglify-es": "^3.3.9",
     "zlib": "^1.0.5"
+  },
+  "peerDependencies": {
+    "@quasar/quasar-ui-qmarkdown": "^1.0.0",
+    "@quasar/quasar-ui-qribbon": "^1.0.0"
   },
   "browserslist": [
     "last 1 version, not dead, ie >= 11"
