--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quasar-ui-json-api-viewer",
-  "version": "1.0.7",
+  "version": "1.0.12",
   "author": "Jeff Galbraith <jeff@quasar.dev>",
   "description": "Display your Quasar JSON API",
   "license": "MIT",
@@ -29,11 +29,15 @@
   },
   "bugs": "",
   "homepage": "",
+  "dependencies": {
+    "@quasar/quasar-ui-qmarkdown": "^1.0.22",
+    "@quasar/quasar-ui-qribbon": "^1.0.0-beta.14"
+  },
   "devDependencies": {
-    "@rollup/plugin-buble": "^0.21.0",
-    "@rollup/plugin-commonjs": "^11.0.1",
-    "@rollup/plugin-json": "^4.0.1",
-    "@rollup/plugin-node-resolve": "^7.0.0",
+    "@rollup/plugin-buble": "^0.21.1",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-json": "^4.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
     "@vue/eslint-config-standard": "^5.1.0",
     "autoprefixer": "^9.7.4",
     "babel-eslint": "^10.0.3",
@@ -41,25 +45,25 @@
     "cssnano": "^4.1.10",
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
-    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.1.2",
+    "fs-extra": "^8.1.0",
     "node-sass": "^4.13.1",
-    "open": "^7.0.0",
+    "open": "^7.0.2",
     "postcss": "^7.0.26",
     "postcss-rtl": "^1.5.0",
-    "quasar": "^1.7.4",
-    "quasar-json-api": "^0.0.19",
-    "rimraf": "^3.0.0",
-    "rollup": "^1.29.0",
+    "quasar": "^1.8.5",
+    "quasar-json-api": "^0.0.20",
+    "rimraf": "^3.0.1",
+    "rollup": "^1.31.0",
     "uglify-es": "^3.3.9",
     "zlib": "^1.0.5"
   },
   "peerDependencies": {
-    "@quasar/quasar-ui-qmarkdown": "^1.0.16",
-    "@quasar/quasar-ui-qribbon": "^1.0.0"
+
   },
   "browserslist": [
     "last 1 version, not dead, ie >= 11"
