--- a/ui/package.json
+++ b/ui/package.json
@@ -38,10 +38,10 @@
     "attributes": "dist/vetur/attributes.json"
   },
   "dependencies": {
-    "@quasar/quasar-ui-qmarkdown": "^1.0.35",
-    "@quasar/quasar-ui-qribbon": "^1.0.0-beta.14"
   },
   "devDependencies": {
+    "@quasar/quasar-ui-qmarkdown": "^1.0.35",
+    "@quasar/quasar-ui-qribbon": "^1.0.0-beta.14",
     "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-json": "^4.1.0",
