--- a/ui/package.json
+++ b/ui/package.json
@@ -43,15 +43,14 @@
     "@quasar/quasar-ui-qmarkdown": "^1.0.35",
     "@quasar/quasar-ui-qribbon": "^1.0.0-beta.14",
     "@rollup/plugin-buble": "^0.21.3",
-    "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-node-resolve": "^10.0.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "autoprefixer": "^9.8.5",
     "babel-eslint": "^10.1.0",
     "chalk": "^4.1.0",
     "cssnano": "^4.1.10",
-    "eslint": "^7.12.0",
+    "eslint": "^7.13.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
@@ -59,14 +58,14 @@
     "eslint-plugin-standard": "^4.0.2",
     "eslint-plugin-vue": "^7.1.0",
     "fs-extra": "^9.0.1",
-    "node-sass": "^4.14.1",
+    "sass": "^1.29.0",
     "open": "^7.3.0",
     "postcss": "^7.0.32",
     "postcss-rtl": "^1.7.3",
-    "quasar": "^1.14.2",
+    "quasar": "^1.14.3",
     "quasar-json-api": "^1.0.1",
     "rimraf": "^3.0.2",
-    "rollup": "^2.32.1",
+    "rollup": "^2.33.1",
     "uglify-es": "^3.3.9",
     "zlib": "^1.0.5"
   },
