--- a/app-extension/package.json
+++ b/app-extension/package.json
@@ -5,17 +5,41 @@
   "author": "Jeff Galbraith <jeff@quasar.dev>",
   "license": "MIT",
   "main": "src/index.js",
+  "scripts": {
+    "lint": "eslint --ext .js,.vue src",
+    "lint-fix": "eslint --ext .js,.vue src --fix"
+  },
+  "funding": {
+    "type": "github",
+    "url": "https://github.com/sponsors/hawkeye64"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "bugs": "https://github.com/hawkeye64/json-api-viewer/issues",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git+https://github.com/hawkeye64/json-api-viewer.git"
   },
-  "bugs": "",
-  "homepage": "",
+  "homepage": "https://github.com/hawkeye64/json-api-viewer",
+  "keywords": [
+    "quasar",
+    "quasarframework",
+    "json api",
+    "viewer"
+  ],
   "dependencies": {
     "quasar-ui-json-api-viewer": "^1.3.0"
   },
+  "devDependencies": {
+    "@vue/eslint-config-standard": "^5.1.2",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.14.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-vue": "^7.1.0"
+  },
   "engines": {
-    "node": ">= 8.9.0",
+    "node": ">= 10.0.0",
     "npm": ">= 5.6.0",
     "yarn": ">= 1.6.0"
   }
