--- a/ui/.npmignore
+++ b/ui/.npmignore
@@ -8,6 +8,7 @@ yarn.lock
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+jsconfig.json
 
 # Editor directories and files
 .idea
@@ -17,5 +18,17 @@ yarn-error.log*
 *.njsproj
 *.sln
 .editorconfig
+
+# Linters
 .eslintignore
 .eslintrc.js
+.babelrc
+
+# Other
+/src/components/QCalendar.json
+/src/utils/Timestamp.json
+
+# Testing
+/test
+.env.jest
+jest.config.js
