--- a/ui/package.json
+++ b/ui/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "module": "dist/index.esm.js",
   "main": "dist/index.common.js",
+  "typings": "dist/types/index.d.ts",
   "scripts": {
     "lint": "eslint --ext .js,.vue src",
     "lint-fix": "eslint --ext .js,.vue src --fix",
@@ -33,44 +34,45 @@
   },
   "bugs": "https://github.com/hawkeye64/json-api-viewer/issues",
   "homepage": "https://github.com/hawkeye64/json-api-viewer",
+  "keywords": [
+    "quasar",
+    "quasarframework",
+    "json api",
+    "viewer"
+  ],
   "vetur": {
     "tags": "dist/vetur/tags.json",
     "attributes": "dist/vetur/attributes.json"
   },
-  "dependencies": {
-  },
   "devDependencies": {
-    "@quasar/quasar-ui-qmarkdown": "^1.0.35",
+    "@quasar/quasar-ui-qmarkdown": "^1.2.1",
     "@quasar/quasar-ui-qribbon": "^1.0.0-beta.14",
     "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@vue/eslint-config-standard": "^5.1.2",
-    "autoprefixer": "^9.8.5",
+    "autoprefixer": "^10.0.2",
     "babel-eslint": "^10.1.0",
     "chalk": "^4.1.0",
     "cssnano": "^4.1.10",
-    "eslint": "^7.13.0",
+    "eslint": "^7.14.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.2",
+    "eslint-plugin-standard": "^4.1.0",
     "eslint-plugin-vue": "^7.1.0",
     "fs-extra": "^9.0.1",
     "sass": "^1.29.0",
     "open": "^7.3.0",
-    "postcss": "^7.0.32",
-    "postcss-rtl": "^1.7.3",
-    "quasar": "^1.14.3",
-    "quasar-json-api": "^1.0.1",
+    "postcss": "^8.1.9",
+    "quasar": "^1.14.5",
+    "quasar-json-api": "^1.2.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.33.1",
+    "rollup": "^2.33.3",
+    "rtlcss": "^2.6.1",
     "uglify-es": "^3.3.9",
     "zlib": "^1.0.5"
-  },
-  "peerDependencies": {
-
   },
   "browserslist": [
     "last 1 version, not dead, ie >= 11"
