--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quasar-ui-json-api-viewer",
-  "version": "1.3.0",
+  "version": "2.0.0-alpha.3",
   "author": "Jeff Galbraith <jeff@quasar.dev>",
   "description": "Display your Quasar JSON API",
   "license": "MIT",
@@ -45,36 +45,50 @@
     "attributes": "dist/vetur/attributes.json"
   },
   "devDependencies": {
-    "@quasar/quasar-ui-qmarkdown": "^1.2.1",
-    "@quasar/quasar-ui-qribbon": "^1.0.0-beta.14",
+    "@babel/core": "^7.13.14",
+    "@babel/eslint-parser": "^7.13.14",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^10.0.0",
-    "@vue/eslint-config-standard": "^5.1.2",
-    "autoprefixer": "^10.0.2",
+    "@rollup/plugin-node-resolve": "^11.2.1",
+    "@rollup/plugin-replace": "^2.4.2",
+    "@vue/eslint-config-standard": "^6.0.0",
+    "autoprefixer": "^10.2.5",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-transform-modern-regexp": "^0.0.6",
     "chalk": "^4.1.0",
-    "cssnano": "^4.1.10",
-    "eslint": "^7.14.0",
+    "cssnano": "^5.0.1",
+    "eslint": "^7.23.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-quasar": "^1.0.0",
     "eslint-plugin-standard": "^4.1.0",
-    "eslint-plugin-vue": "^7.1.0",
-    "fs-extra": "^9.0.1",
-    "sass": "^1.29.0",
-    "open": "^7.3.0",
-    "postcss": "^8.1.9",
-    "quasar": "^1.14.5",
-    "quasar-json-api": "^1.2.2",
+    "eslint-plugin-vue": "^7.8.0",
+    "fs-extra": "^9.1.0",
+    "open": "^8.0.5",
+    "postcss": "^8.2.10",
+    "quasar": "^2.0.0-beta.12",
+    "quasar-json-api": "^1.2.6",
     "rimraf": "^3.0.2",
-    "rollup": "^2.33.3",
-    "rtlcss": "^2.6.1",
+    "rollup": "^2.45.2",
+    "rtlcss": "^3.1.2",
+    "sass": "^1.32.8",
     "uglify-es": "^3.3.9",
     "zlib": "^1.0.5"
   },
   "browserslist": [
-    "last 1 version, not dead, ie >= 11"
-  ]
+    "last 4 Chrome versions",
+    "last 4 Firefox versions",
+    "last 2 Edge versions",
+    "last 4 Safari versions",
+    "last 4 Android versions",
+    "last 4 ChromeAndroid versions",
+    "last 4 FirefoxAndroid versions",
+    "last 4 iOS versions"
+  ],
+  "dependencies": {
+    "prismjs": "^1.23.0"
+  }
 }
