--- a/ui/package.json
+++ b/ui/package.json
@@ -45,37 +45,34 @@
     "attributes": "dist/vetur/attributes.json"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.5",
-    "@babel/eslint-parser": "^7.14.5",
+    "@babel/core": "^7.15.5",
+    "@babel/eslint-parser": "^7.15.7",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.0",
-    "@rollup/plugin-replace": "^2.4.2",
-    "@vue/eslint-config-standard": "^6.0.0",
-    "autoprefixer": "^10.2.6",
+    "@rollup/plugin-node-resolve": "^13.0.5",
+    "autoprefixer": "^10.3.6",
     "babel-eslint": "^10.1.0",
     "babel-plugin-transform-modern-regexp": "^0.0.6",
-    "chalk": "^4.1.1",
-    "cssnano": "^5.0.6",
-    "eslint": "^7.28.0",
+    "chalk": "^4.1.2",
+    "cssnano": "^5.0.8",
+    "eslint": "^7.32.0",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-quasar": "^1.0.0",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-vue": "^7.11.0",
+    "eslint-plugin-vue": "^7.18.0",
     "fs-extra": "^10.0.0",
-    "open": "^8.2.0",
-    "postcss": "^8.3.2",
-    "quasar": "^2.0.0-beta.12",
-    "quasar-json-api": "^1.2.6",
+    "open": "^8.2.1",
+    "postcss": "^8.3.8",
+    "quasar": "^2.1.0",
+    "quasar-json-api": "2.0.0-alpha.3",
     "rimraf": "^3.0.2",
-    "rollup": "^2.51.2",
-    "rtlcss": "^3.2.0",
-    "sass": "^1.34.1",
-    "uglify-es": "^3.3.9",
+    "rollup": "^2.58.0",
+    "rtlcss": "^3.3.0",
+    "sass": "^1.42.1",
+    "uglify-js": "^3.14.2",
     "zlib": "^1.0.5"
   },
   "browserslist": [
@@ -89,6 +86,6 @@
     "last 4 iOS versions"
   ],
   "dependencies": {
-    "prismjs": "^1.23.0"
+    "prismjs": "^1.25.0"
   }
 }
